# CPU-Simulator

./: .gitignore  CMakeLists.txt  README.md  gen_initInst.py  instruction.cpp  main.cpp  opcode.hpp  simulator.cpp  simulator.hpp
config/: memory_num.hpp
src/: decode.cpp  disasm.cpp  instruction.cpp  main.cpp  opcode.hpp  print.cpp  simulator.cpp  simulator.hpp  sized_deque.hpp  util.cpp  util.hpp
src/instruction/: abs_s.cpp  add.cpp  add_s.cpp  addi.cpp  and.cpp  andi.cpp  asrt.cpp  asrt_s.cpp  bc1f.cpp  bc1t.cpp  beq.cpp  bgez.cpp  bgezal.cpp  bgtz.cpp  blez.cpp  bltz.cpp  bltzal.cpp  c_eq_s.cpp  c_le_s.cpp  c_lt_s.cpp  cvt_s_w.cpp  cvt_w_s.cpp  div.cpp  div_s.cpp  divi.cpp  divu.cpp  halt.cpp  in.cpp  j.cpp  jal.cpp  jalr.cpp  jr.cpp  lb.cpp  lbu.cpp  lui.cpp  lw.cpp  lwc1.cpp  lwo.cpp  lwoc1.cpp  mfc1.cpp  (+32 more)
test/: CMakeLists.txt  gen_in_test.py  gen_input.c  input.txt  util_test.cpp
test/abs_s/: abs_s.txt
test/add/: add.txt
test/add_s/: add_s.txt
test/addi/: addi.txt
test/and_/: and_.txt
test/andi/: andi.txt
test/cvt_s_w/: cvt_s_w.txt
test/cvt_w_s/: cvt_w_s.txt
test/div/: div.txt
test/divi/: divi.txt
test/in/: in.txt
test/infloop/: infloop.txt
test/lui/: lui.txt
test/mov_s/: mov_s.txt
test/mtc1/: mtc1.txt
test/mult/: mult.txt
test/multi/: multi.txt
test/neg_s/: neg_s.txt
test/nor/: nor.txt
test/or_/: or_.txt
test/ori/: ori.txt
test/sll/: sll.txt
test/sqrt_s/: sqrt_s.txt
test/sra/: sra.txt
test/srl/: srl.txt
test/sub/: sub.txt
test/sub_s/: sub_s.txt
test/sw/: sw.txt
test/swc1/: swc1.txt
test/swo/: swo.txt
test/swoc1/: swoc1.txt
test/xor_/: xor_.txt
test/xori/: xori.txt
tools/: CMakeLists.txt  ascii2bin.cpp  ascii2bin.py  dec2bin.cpp  gen_instruction.py  header_footer.py  pinst.gpl  pinst.py  pinst.sh
